// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildMessageForSuite builds a Slack message for a failing suite 1`] = `
Object {
  "blocks": Array [
    Object {
      "elements": Array [
        Object {
          "alt_text": "Wolf1",
          "image_url": "https://qawolf-public.s3.us-east-2.amazonaws.com/wolf-brown-slack.png",
          "type": "image",
        },
        Object {
          "text": "Wolf1 here: <http://localhost:3000/suites/suiteId|trigger1 tests> failed.",
          "type": "mrkdwn",
        },
      ],
      "type": "context",
    },
    Object {
      "accessory": Object {
        "alt_text": "testName",
        "image_url": "url",
        "type": "image",
      },
      "text": Object {
        "text": "<http://localhost:3000/run/runId|testName>",
        "type": "mrkdwn",
      },
      "type": "section",
    },
  ],
  "text": "trigger1 tests failed.",
}
`;

exports[`buildMessageForSuite builds a Slack message for a failing suite with git details 1`] = `
Object {
  "blocks": Array [
    Object {
      "elements": Array [
        Object {
          "alt_text": "Wolf1",
          "image_url": "https://qawolf-public.s3.us-east-2.amazonaws.com/wolf-brown-slack.png",
          "type": "image",
        },
        Object {
          "text": "Wolf1 here: <http://localhost:3000/suites/suiteId|trigger1 tests> failed.",
          "type": "mrkdwn",
        },
      ],
      "type": "context",
    },
    Object {
      "text": Object {
        "text": "❌ <https://github.com/qawolf/example/pull/123/commits/af2565c5cc30fac7bccfcf442994f6324da4fcd9|af2565c>: feature, initial commit (<https://github.com/qawolf/example/pull/123|#123>)",
        "type": "mrkdwn",
      },
      "type": "section",
    },
    Object {
      "accessory": Object {
        "alt_text": "testName",
        "image_url": "url",
        "type": "image",
      },
      "text": Object {
        "text": "<http://localhost:3000/run/runId|testName>",
        "type": "mrkdwn",
      },
      "type": "section",
    },
  ],
  "text": "trigger1 tests failed.",
}
`;

exports[`buildMessageForSuite builds a Slack message for a failing suite with git details 2`] = `
Object {
  "blocks": Array [
    Object {
      "elements": Array [
        Object {
          "alt_text": "Wolf1",
          "image_url": "https://qawolf-public.s3.us-east-2.amazonaws.com/wolf-brown-slack.png",
          "type": "image",
        },
        Object {
          "text": "Wolf1 here: <http://localhost:3000/suites/suiteId|trigger1 tests> failed.",
          "type": "mrkdwn",
        },
      ],
      "type": "context",
    },
    Object {
      "text": Object {
        "text": "❌ <https://github.com/qawolf/example/pull/123/commits/af2565c5cc30fac7bccfcf442994f6324da4fcd9|af2565c>: feature, initial commit",
        "type": "mrkdwn",
      },
      "type": "section",
    },
    Object {
      "accessory": Object {
        "alt_text": "testName",
        "image_url": "url",
        "type": "image",
      },
      "text": Object {
        "text": "<http://localhost:3000/run/runId|testName>",
        "type": "mrkdwn",
      },
      "type": "section",
    },
  ],
  "text": "trigger1 tests failed.",
}
`;

exports[`buildMessageForSuite builds a Slack message for a passing suite 1`] = `
Object {
  "blocks": Array [
    Object {
      "elements": Array [
        Object {
          "alt_text": "Wolf1",
          "image_url": "https://qawolf-public.s3.us-east-2.amazonaws.com/wolf-brown-party-slack.png",
          "type": "image",
        },
        Object {
          "text": "Wolf1 here: <http://localhost:3000/suites/suiteId|trigger1 tests> passed!",
          "type": "mrkdwn",
        },
      ],
      "type": "context",
    },
  ],
  "text": "trigger1 tests passed!",
}
`;

exports[`buildMessageForSuite builds a Slack message for a passing suite 2`] = `
Object {
  "blocks": Array [
    Object {
      "elements": Array [
        Object {
          "alt_text": "Wolf1",
          "image_url": "https://qawolf-public.s3.us-east-2.amazonaws.com/wolf-brown-party-slack.png",
          "type": "image",
        },
        Object {
          "text": "Wolf1 here: <http://localhost:3000/suites/suiteId|Sign up tests> passed!",
          "type": "mrkdwn",
        },
      ],
      "type": "context",
    },
  ],
  "text": "Sign up tests passed!",
}
`;

exports[`buildMessageForSuite builds a Slack message for a passing suite 3`] = `
Object {
  "blocks": Array [
    Object {
      "elements": Array [
        Object {
          "alt_text": "Wolf1",
          "image_url": "https://qawolf-public.s3.us-east-2.amazonaws.com/wolf-brown-party-slack.png",
          "type": "image",
        },
        Object {
          "text": "Wolf1 here: <http://localhost:3000/suites/suiteId|manually triggered tests> passed!",
          "type": "mrkdwn",
        },
      ],
      "type": "context",
    },
  ],
  "text": "manually triggered tests passed!",
}
`;
